--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -75,30 +75,30 @@ jobs:
       #     PGPASSWORD: secretpassword
       - name: Build baton-google-bigquery
         run: go build ./cmd/baton-google-bigquery
-      - name: Run baton-google-bigquery
-        run: ./baton-google-bigquery
+      # - name: Run baton-google-bigquery
+      #   run: ./baton-google-bigquery
 
       - name: Install baton
         run: ./scripts/get-baton.sh && mv baton /usr/local/bin
 
-      - name: Check for grant before revoking
+      # - name: Check for grant before revoking
 
-        run:
-          baton grants --entitlement="${{ env.CONNECTOR_ENTITLEMENT }}" --output-format=json | jq --exit-status ".grants[].principal.id.resource == \"${{ env.CONNECTOR_PRINCIPAL }}\""
+      #   run:
+      #     baton grants --entitlement="${{ env.CONNECTOR_ENTITLEMENT }}" --output-format=json | jq --exit-status ".grants[].principal.id.resource == \"${{ env.CONNECTOR_PRINCIPAL }}\""
 
 
-      - name: Revoke grants
-        run: ./baton-google-bigquery --revoke-grant="${{ env.CONNECTOR_GRANT }}"
+      # - name: Revoke grants
+      #   run: ./baton-google-bigquery --revoke-grant="${{ env.CONNECTOR_GRANT }}"
 
-      - name: Check grant was revoked
-        run: ./baton-google-bigquery && baton grants --entitlement="${{ env.CONNECTOR_ENTITLEMENT }}" --output-format=json | jq --exit-status "if .grants then .grants[]?.principal.id.resource != \"${{ env.CONNECTOR_PRINCIPAL }}\" else . end"
+      # - name: Check grant was revoked
+      #   run: ./baton-google-bigquery && baton grants --entitlement="${{ env.CONNECTOR_ENTITLEMENT }}" --output-format=json | jq --exit-status "if .grants then .grants[]?.principal.id.resource != \"${{ env.CONNECTOR_PRINCIPAL }}\" else . end"
 
-      - name: Grant entitlement
-        # Change the grant arguments to the correct IDs for your test data
-        run: ./baton-google-bigquery --grant-entitlement="${{ env.CONNECTOR_ENTITLEMENT }}" --grant-principal="${{ env.CONNECTOR_PRINCIPAL }}" --grant-principal-type="${{ env.CONNECTOR_PRINCIPAL_TYPE }}"
+      # - name: Grant entitlement
+      #   # Change the grant arguments to the correct IDs for your test data
+      #   run: ./baton-google-bigquery --grant-entitlement="${{ env.CONNECTOR_ENTITLEMENT }}" --grant-principal="${{ env.CONNECTOR_PRINCIPAL }}" --grant-principal-type="${{ env.CONNECTOR_PRINCIPAL_TYPE }}"
 
-      - name: Check grant was re-granted
+      # - name: Check grant was re-granted
 
-        run:
-          baton grants --entitlement="${{ env.CONNECTOR_ENTITLEMENT }}" --output-format=json | jq --exit-status ".grants[].principal.id.resource == \"${{ env.CONNECTOR_PRINCIPAL }}\""
+      #   run:
+      #     baton grants --entitlement="${{ env.CONNECTOR_ENTITLEMENT }}" --output-format=json | jq --exit-status ".grants[].principal.id.resource == \"${{ env.CONNECTOR_PRINCIPAL }}\""
 
