--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,3 +1,4 @@
+version: 2
 project_name: baton-google-bigquery
 builds:
   - binary: baton-google-bigquery
@@ -68,7 +69,7 @@ brews:
   - repository:
       owner: conductorone
       name: homebrew-baton
-    folder: Formula
+    directory: Formula
     homepage: https://conductorone.com
     test: |
       system "#{bin}/baton-google-bigquery -v"
