--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -36,7 +36,7 @@ builds:
     hooks:
       post:
         - gon .gon-arm64.json
-        - mv dist/baton-google-bigquery-darwin-arm64.signed.zip dist/macos-arm64_darwin_arm64/baton-google-bigquery
+        - mv dist/baton-google-bigquery-darwin-arm64.signed.zip dist/macos-arm64_darwin_arm64_v8.0/baton-google-bigquery
 archives:
   - id: linux-archive
     builds:
